chore: improve XXE attack prevention (#2008)
Reported by Aikido earlier today.